# github-assistant

./: .env.sample  Cargo.toml  readme.md
src/: main.rs  utils.rs
src/api/: fetch_github_data.rs  fetch_github_pr_review.rs  mod.rs  update_issue_status.rs
src/render_items/: mod.rs  render_error.rs  render_home.rs  render_issues.rs  render_loading_popup.rs  render_popup.rs  render_waiting_screen.rs
src/structs/: api_response.rs  api_response_item.rs  issue_comments.rs  label.rs  mod.rs  user.rs
