[package]
name = "rust-github-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.19", features = [ "serde" ] }
open = "3.0"
termion = "1.5.6"
textwrap = "0.14.1"
chrono = "0.4.19"
