[package]
name = "github-assistant"
version = "0.1.4"
edition = "2021"
authors = ["simon Busch <simon.busch@live.fr>"]
description = "Keep track of your github assignments"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Simon-Busch/github-assistant"
repository = "https://github.com/Simon-Busch/github-assistant"
categories = ["command-line-utilities"]
keywords = ["github", "assistant", "cli", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.27.0", features = [ "serde" ] }
open = "5.0.0"
termion = "2.0.3"
textwrap = "0.16.0"
chrono = "0.4.19"
